--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,19 +7,19 @@
         <GridLayout rows="auto, auto">
 
             <StackLayout row="0" class="input-field">
-                <TextField class="input" hint="&#xe908; Correo Electrónico" keyboardType="email" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email"></TextField>
+                <TextField class="input" hint="{{iconEmail}}  Correo Electrónico" keyboardType="email" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email"></TextField>
                 <StackLayout class="hr-light"></StackLayout>
             </StackLayout>
 
             <StackLayout row="1" class="input-field">
-                <TextField class="input" hint="&#xe90d; Contraseña" secure="true" [(ngModel)]="password"></TextField>
+                <TextField class="input" hint="{{iconPassword}}  Contraseña" secure="true" [(ngModel)]="password"></TextField>
                 <StackLayout class="hr-light"></StackLayout>
             </StackLayout>
 
         </GridLayout>
 
-        <Button text="Ingresar a tu Cuenta &#xea13; " class="btn btn-primary btn-active ico" (tap)="ingresar()"></Button>
-        <Button text=" &#xe904;Registrar una Cuenta" (tap)="irRegistrar()" class="btn btn-outline btn-active ico"></Button>
+        <Button text="Ingresar a tu Cuenta &#xea13; " class="btn-primary btn-active ico" (tap)="ingresar()"></Button>
+        <Button text=" &#xe904; Registrar una Cuenta" (tap)="irRegistrar()" class="btn-outline btn-rounded-lg btn-active ico"></Button>
 
     </StackLayout>
 
