--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,6 @@
 
 .btn-primary {
     height: 50;
-    background-color: #D51A1A;
     border-radius: 5;
     font-size: 14;
     font-weight: 600;
@@ -35,9 +34,6 @@ THEME BUILDER
 
 .action-bar {
     color: #ffffff;
-}
-
-.action-bar {
     background-color: #0e3746;
 }
 
@@ -45,66 +41,12 @@ THEME BUILDER
     background-color: #eae8dc;
 }
 
-.tab-view {
-    tab-background-color: #eae8dc;
-}
-
-.list-group,
-.list-group-item {
-    background-color: #f4f2ec;
-}
-
-.page label,
-.tab-view label {
-    color: #0e3746;
-}
-
-.segmented-bar {
-    selected-background-color: #0e3743;
-}
-
-.segmented-bar {
-    color: #0e3746;
-}
-
-.segmented-bar {
-    background-color: #f4f2ec;
-}
-
-.switch[checked=true] {
-    color: #ffffff;
-}
-
-.switch[checked=true] {
-    background-color: #0e3746;
-}
-
 .activity-indicator {
     color: #021820;
 }
 
-.slider {
-    color: #ffffff;
-}
-
-.slider {
-    background-color: #0e3746;
-}
-
-.progress {
-    color: #0e3746;
-}
-
 .img-circle {
     border-radius: 40;
-}
-
-.list-group-item-heading {
-    font-size: 16;
-}
-
-.list-group-item-text {
-    font-size: 14;
 }
 
 .img-rounded {
@@ -139,73 +81,21 @@ THEME BUILDER
     font-size: 12;
 }
 
-.page label.text-primary,
-.tab-view label.text-primary {
-    color: #30bcff;
-}
-
-.page label.bg-primary,
-.tab-view label.bg-primary {
-    background-color: #30bcff;
-}
-
-.page label.text-danger,
-.tab-view label.text-danger {
-    color: #d9534f;
-}
-
-.page label.bg-danger,
-.tab-view label.bg-danger {
-    background-color: #d9534f;
-}
-
-.page label.text-muted,
-.tab-view label.text-muted {
-    color: #a2a2a2;
-}
-
 .btn {
     color: #0e3746;
 }
 
 .btn-primary {
     background-color: #0e3746;
-}
-
-.btn-primary {
     border-color: #0e3746;
-}
-
-.btn-primary {
     color: #f4f2ec;
 }
 
 .btn-outline {
     border-color: #0e3746;
-}
-
-.btn-outline {
     background-color: transparent;
-}
-
-.btn-outline {
     border-width: 1;
-}
-
-.btn-outline {
     color: #0e3746;
-}
-
-.btn[isEnabled=false] {
-    background-color: #0e3746;
-}
-
-.btn[isEnabled=false] {
-    border-color: #0e3746;
-}
-
-.btn[isEnabled=false] {
-    color: #f4f2ec;
 }
 
 .btn-rounded-sm {
@@ -235,26 +125,6 @@ THEME BUILDER
     android-selected-tab-highlight-color: #be2623;
 }
 
-.sidedrawer-header {
-    background-color: #0e3743;
-}
-
-.sidedrawer-header-brand {
-    color: #ffffff;
-}
-
-.sidedrawer-content {
-    background-color: #f4f2ec;
-}
-
-.sidedrawer-list-item {
-    color: #000000;
-}
-
-.sidedrawer-list-item.active {
-    background-color: #f4f2ec;
-}
-
-.sidedrawer-list-item.active {
-    color: #000000;
+.text-danger {
+    color: #be2623
 }
