--- a/src/app/pages/cotizaciones/cotizaciones.component.html
+++ b/src/app/pages/cotizaciones/cotizaciones.component.html
@@ -3,31 +3,31 @@
 
     <RadListView [items]="cotizaciones" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
         <ng-template tkListItemTemplate let-cotizacion="item">
-
+            <!-- 
             <StackLayout class="margenSeparacion" orientation="horizontal">
                 <Label class="imageList img-circle ico" [text]="cotizacion.img"></Label>
                 <StackLayout orientation="vertical">
-                    <StackLayout class="list-group-item-heading" orientation="horizontal">
+                    <StackLayout class="list-group" orientation="horizontal">
                         <Label text="Numero de Productos:" textWrap="true"></Label>
                         <Label [text]="cotizacion.productos"></Label>
                     </StackLayout>
-                    <StackLayout class="list-group-item-text" orientation="horizontal">
+                    <StackLayout class="list-group" orientation="horizontal">
                         <Label text="Fecha:" textWrap="true"></Label>
                         <Label [text]="cotizacion.fecha | date:'fullDate':'es-EC'"></Label>
                     </StackLayout>
-                    <StackLayout class="list-group-item-text" orientation="vertical">
+                    <StackLayout class="list-group" orientation="vertical">
                         <StackLayout class="list-group-item-text" orientation="horizontal">
                             <Label text="Total:" textWrap="true"></Label>
                             <Label [text]="cotizacion.total" class="h2 text-danger"></Label>
                         </StackLayout>
                     </StackLayout>
                 </StackLayout>
-            </StackLayout>
+            </StackLayout> -->
 
-            <!-- <GridLayout class="music-genre skeleton" rows="*" columns="55,*" >
+            <GridLayout class="music-genre skeleton" rows="*" columns="55,*">
                 <Label row="0" col="0" text=" " class="number number-skeleton"></Label>
                 <Label row="0" col="1" text=" " class="genre genre-skeleton"></Label>
-            </GridLayout> -->
+            </GridLayout>
 
         </ng-template>
 
