--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -37,8 +37,11 @@
     
     .searchbar {
         font-size: 18;
-        text-field-hint-color: "white";
-        color: "#f4f2ec"
+    }
+    
+    .iconos {
+        font-size: 16;
+        color: #eae8dc;
     }
     
     .ico {
