--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<ns-action-bar title="Perfil"></ns-action-bar>
+<ns-action-bar title="Perfil" class="action-bar" [showBackButton]="false"></ns-action-bar>
 <ScrollView>
 
     <GridLayout height="" rows="auto auto">
